# AutonomOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_INTEGRATION.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.optimized  EXPORT_FEATURES.md  FILE_STRUCTURE.md  FRONTEND_SETUP.md  LICENSE  Makefile  OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  QUICK_FIX_GUIDE.md  README.md  SECURITY_FIXES.md  SETUP.md  TESTING.md  VISION.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  auth.py  main.py  rate_limiter.py  requirements-minimal.txt  requirements-optimized.txt  requirements.txt  setup.sh  validators.py
backend/execution/: README.md  __init__.py  actions.py  context.py  executor.py  logic.py  triggers.py
backend/optimizations/: __init__.py  cache_manager.py  connection_pool.py  error_handler.py  monitoring.py
docs/: EXAMPLES.md  OPTIMIZATION.md  OPTIMIZATION_QUICKSTART.md  OPTIMIZATION_SUMMARY.md  RESULTS_PAGE_UPDATE.md
examples/: multi_agent_demo.py
frontend/: .env  .env.example  ADVANCED_FEATURES.md  README.md  index.html  package.json  setup.sh  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActionConfigPanel.tsx  ActivityFeed.tsx  AgentConfigPanel.tsx  AnimatedBackground.tsx  AppLayout.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ExecutionResultsPanel.tsx  Header.tsx  Layout.tsx  LoadingSpinner.tsx  LogicConfigPanel.tsx  Modal.tsx  NodePanel.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatCard.tsx  TemplatesPanel.tsx  Toast.tsx  TriggerConfigPanel.tsx  WorkflowBuilder.tsx  WorkflowCard.tsx
frontend/src/components/nodes/: ActionNode.tsx  AgentNode.tsx  LogicNode.tsx  TriggerNode.tsx  index.ts
frontend/src/contexts/: ApiKeyContext.tsx  AuthContext.tsx  ExecutionHistoryContext.tsx  ThemeContext.tsx  WorkflowContext.tsx
frontend/src/hooks/: useDebounce.ts  useInfiniteScroll.ts  useLocalStorage.ts  useUndo.ts  useWebSocket.ts
frontend/src/pages/: AnalyticsPage.tsx  Dashboard.tsx  DashboardPage.tsx  Landing.tsx  LandingPage.tsx  LoginPage.tsx  ResultsPage.tsx  Settings.tsx  SettingsPage.tsx  SignupPage.tsx  TemplatesPage.tsx  WorkflowBuilderPage.tsx  Workflows.tsx  WorkflowsPage.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/test/components/: ErrorBoundary.test.tsx
frontend/src/test/contexts/: ApiKeyContext.test.ts
frontend/src/test/services/: api.test.ts
frontend/src/utils/: enhanced-export.ts  export-advanced.ts  export.ts  helpers.ts
src/: __init__.py
src/agent/: __init__.py  brain.py  scheduler.py
src/api/: workflow_api.py
src/marketplace/: README.md
src/marketplace/backend/: marketplace_api.py
src/marketplace/cli/: autonomos-skills
src/marketplace/frontend/: package.json
src/marketplace/schema/: skill-manifest.schema.json
src/multi_agent/: README.md  __init__.py
src/multi_agent/core/: agent.py
src/multi_agent/patterns/: __init__.py  council.py  hierarchical.py  swarm.py
src/ui/backend/: __init__.py  api.py
src/utils/: __init__.py  config.py
src/web/workflow-editor/: README.md  package.json
tests/: test_basic.py
tests/backend/: test_main.py  test_validators.py
tests/multi_agent/: test_multi_agent.py
(+11 files in other folders)
