[project]
name = "autonomos"
version = "1.0.0"
description = "24/7 Autonomous AI Agent Framework with Multi-Agent Collaboration"
authors = [{name = "Omkar", email = "61723019+Omkar0612@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

keywords = ["ai", "agents", "automation", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "openai>=1.10.0",
    "numpy>=1.26.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
# Sync with ruff.toml - removed 'I' (isort) to match standalone config
select = ["E", "F", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "B904"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# Fix module name conflicts
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
# Ignore duplicate module errors
[[tool.mypy.overrides]]
module = "multi_agent.*"
ignore_errors = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
